<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E6E6"
    tools:context=".PantallaRegistro">

    <TextView
        android:id="@+id/textNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/nombreRegistro"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textApellido"
        app:layout_constraintEnd_toStartOf="@+id/editTextNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloRegistro" />

    <Spinner
        android:id="@+id/spRecogida"
        android:layout_width="206dp"
        android:layout_height="34dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="41dp"
        android:entries="@array/spinnerRecogida"
        android:prompt="@string/avisoSpinner"
        app:layout_constraintBottom_toTopOf="@+id/editTextDireccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textRecogida"
        app:layout_constraintTop_toBottomOf="@+id/editTextTelefono" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/hintNombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextApellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textNombre"
        app:layout_constraintTop_toBottomOf="@+id/tituloRegistro" />

    <TextView
        android:id="@+id/textTelefono"
        android:layout_width="59dp"
        android:layout_height="19dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="57dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/telefonoRegistro"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textRecogida"
        app:layout_constraintEnd_toStartOf="@+id/editTextTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textApellido" />

    <TextView
        android:id="@+id/textRecogida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="59dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/recogidaRegistro"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textDireccion"
        app:layout_constraintEnd_toStartOf="@+id/spRecogida"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTelefono" />

    <TextView
        android:id="@+id/textApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="33dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/primerApellidoRegistro"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/textTelefono"
        app:layout_constraintEnd_toStartOf="@+id/editTextApellidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textNombre" />

    <TextView
        android:id="@+id/textDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="89dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/direccionRegistr"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/botonContinuar"
        app:layout_constraintEnd_toStartOf="@+id/editTextDireccion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRecogida" />

    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/hintApellido"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextTelefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textApellido"
        app:layout_constraintTop_toBottomOf="@+id/editTextNombre" />

    <EditText
        android:id="@+id/editTextDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="77dp"
        android:ems="10"
        android:hint="@string/hintDireccion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/botonVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textDireccion"
        app:layout_constraintTop_toBottomOf="@+id/spRecogida" />

    <Button
        android:id="@+id/botonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/botonVolver"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botonContinuar"
        app:layout_constraintTop_toBottomOf="@+id/editTextDireccion" />

    <EditText
        android:id="@+id/editTextTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="42dp"
        android:ems="10"
        android:hint="@string/hintTelefono"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:maxLength="9"
        app:layout_constraintBottom_toTopOf="@+id/spRecogida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textTelefono"
        app:layout_constraintTop_toBottomOf="@+id/editTextApellidos" />

    <Button
        android:id="@+id/botonContinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="74dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="76dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/botonContinuar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDireccion" />

    <TextView
        android:id="@+id/tituloRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="94dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="75dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tituloRegistro"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/editTextNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>