<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8E6E6"
    tools:context=".PantallaZumos">

    <ImageView
        android:id="@+id/zumoArandanos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/nombreZumoArandano"
        app:layout_constraintEnd_toStartOf="@+id/zumoTomate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@mipmap/zumo_arandanos_foreground"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/zumoMelocoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="53dp"
        app:layout_constraintBottom_toTopOf="@+id/nombreZumoMelocoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zumoNaranja"
        app:layout_constraintTop_toBottomOf="@+id/precioTomate"
        app:srcCompat="@mipmap/zumo_melocoton_foreground"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/precioMelocoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="152dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/precioZumoMelocoton"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/precioNaranja"
        app:layout_constraintTop_toBottomOf="@+id/nombreZumoMelocoton" />

    <TextView
        android:id="@+id/nombreZumoMelocoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/zumoMelocoton"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/precioMelocoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombreZumoNaranja"
        app:layout_constraintTop_toBottomOf="@+id/zumoMelocoton" />

    <TextView
        android:id="@+id/nombreZumoArandano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/zumoArandanos"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/precioArandanos"
        app:layout_constraintEnd_toStartOf="@+id/nombreZumoTomate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zumoArandanos" />

    <ImageView
        android:id="@+id/zumoNaranja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="92dp"
        app:layout_constraintBottom_toTopOf="@+id/nombreZumoNaranja"
        app:layout_constraintEnd_toStartOf="@+id/zumoMelocoton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precioArandanos"
        app:srcCompat="@mipmap/zumo_naranja_foreground"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <ImageView
        android:id="@+id/zumoTomate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/nombreZumoTomate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/zumoArandanos"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:srcCompat="@mipmap/zumo_tomate_foreground"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/precioTomate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/precioZumoTomate"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/zumoMelocoton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/precioArandanos"
        app:layout_constraintTop_toBottomOf="@+id/nombreZumoTomate" />

    <TextView
        android:id="@+id/nombreZumoTomate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="-20dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/zumoTomate"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/precioTomate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombreZumoArandano"
        app:layout_constraintTop_toBottomOf="@+id/zumoTomate" />

    <TextView
        android:id="@+id/nombreZumoNaranja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/zumoNaranja"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/precioNaranja"
        app:layout_constraintEnd_toStartOf="@+id/nombreZumoMelocoton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zumoNaranja" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="47dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/tituloZumos"
        android:textColor="#000000"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/zumoArandanos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/precioArandanos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/precioZumoArandanos"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/zumoNaranja"
        app:layout_constraintEnd_toStartOf="@+id/precioTomate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreZumoArandano" />

    <TextView
        android:id="@+id/precioNaranja"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="152dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/precioZumoNaranja"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/precioMelocoton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreZumoNaranja" />

    <Button
        android:id="@+id/botonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="53dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/botonVolver"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cbIntoleranteLactosa"
        app:layout_constraintTop_toBottomOf="@+id/precioMelocoton" />

    <CheckBox
        android:id="@+id/cbIntoleranteLactosa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="69dp"
        android:text="@string/intoleranteLactosa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/botonVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precioNaranja" />

</androidx.constraintlayout.widget.ConstraintLayout>